src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;


/*html, body, heading*/
@layer base {
  body {
    @apply bg-[#141414] text-white;
  }

  header {
    @apply fixed top-0 z-50 flex w-full items-center justify-between px-4 py-4 transition-all lg:px-10 lg:py-6;
  }
}

/*Custom classNames*/
@layer components {
  .headerLink {
    @apply cursor-pointer text-sm font-light text-[#e5e5e5] transition duration-[.4s] hover:text-[#b3b3b3];
  }

  .bannerButton {
    @apply flex items-center gap-x-2 rounded px-5 py-1.5 text-sm font-semibold transition hover:opacity-75 md:py-2.5 md:px-8 md:text-xl;
  }
}

